--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,10 +132,17 @@
             android:layout_height="wrap_content"
             android:text="登入"
             android:textSize="16sp"
-
-
             ></Button>
-
+        <TextView
+            android:id="@+id/vertext"
+            android:gravity="center"
+            android:layout_below="@+id/loginbtn"
+            android:layout_marginTop="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="16sp"
+            ></TextView>
     </RelativeLayout>
 
 
