--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -7,7 +7,7 @@
     tools:context=".SplashActivity">
 
     <ImageView
-        android:src="@drawable/favicon"
+        android:src="@drawable/img_otc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
