--- a/app/src/main/res/layout/activity_sell_record.xml
+++ b/app/src/main/res/layout/activity_sell_record.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.buyrecord.BuyRecordActivity">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/daylayout"
@@ -45,11 +44,31 @@
 
             ></ImageButton>
     </RelativeLayout>
+    <RelativeLayout
+        app:layout_constraintTop_toBottomOf="@+id/daylayout"
+        android:id="@+id/selecylayout"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <Spinner
+            android:layout_centerVertical="true"
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ></Spinner>
+
+
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        app:layout_constraintTop_toBottomOf="@id/daylayout"
+        app:layout_constraintTop_toBottomOf="@id/selecylayout"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
