--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -55,7 +55,7 @@
                 android:padding="9dp"
                 android:background="@drawable/shape_red_btn"
                 android:gravity="center"
-                android:text="取消"
+                android:text="网页下载升级"
                 android:textColor="@android:color/white" />
 
             <TextView
@@ -67,7 +67,7 @@
                 android:padding="9dp"
                 android:background="@drawable/shape_red_btn"
                 android:gravity="center"
-                android:text="前往升级"
+                android:text="本地下载升级"
                 android:textColor="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
