--- a/app/src/main/res/layout/sell_list_item.xml
+++ b/app/src/main/res/layout/sell_list_item.xml
@@ -129,15 +129,32 @@
         android:paddingBottom="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         >
         <TextView
             android:layout_marginTop="12dp"
-
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="#3a3a3a"
             android:gravity="center_horizontal"
             android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="500000.000" />
+        <TextView
+            android:layout_marginTop="12dp"
+            android:textSize="16sp"
+            android:textColor="#3a3a3a"
+            android:gravity="center_horizontal"
+            android:id="@+id/exrate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="500000.000" />
+        <TextView
+            android:layout_marginTop="12dp"
+            android:textSize="16sp"
+            android:textColor="#3a3a3a"
+            android:gravity="center_horizontal"
+            android:id="@+id/usdt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="500000.000" />
