--- a/app/src/main/res/layout/activity_group_report.xml
+++ b/app/src/main/res/layout/activity_group_report.xml
@@ -75,13 +75,14 @@
                     android:textColor="@android:color/white"
                     android:text="买币"
                     android:textSize="18sp"/>
+
                 <TextView
                     android:id="@+id/text1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
                     android:text="100.0"
-                    android:textSize="16sp"/>
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp" />
             </LinearLayout>
             <LinearLayout
                 android:layout_marginLeft="16dp"
@@ -220,7 +221,7 @@
 
 
     </LinearLayout>
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/layout"
         app:layout_constraintTop_toBottomOf="@id/daylayout"
         app:layout_constraintRight_toRightOf="parent"
@@ -229,6 +230,7 @@
         android:layout_height="wrap_content"
         >
         <RadioGroup
+            android:layout_centerInParent="true"
             android:id="@+id/group_radio"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
@@ -249,8 +251,17 @@
                 android:layout_height="wrap_content"
                 ></RadioButton>
         </RadioGroup>
+        <Button
+            android:layout_marginLeft="20dp"
+            android:id="@+id/allbutton"
+            android:layout_marginRight="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="汇总报表"
+            android:background="@null"
+            ></Button>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
