--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -68,7 +68,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/white"
-                            android:text="100.0"
                             android:textSize="16sp"/>
                     </LinearLayout>
                     <LinearLayout
@@ -89,7 +88,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/white"
-                            android:text="100.0"
                             android:textSize="16sp"/>
                     </LinearLayout>
                     <LinearLayout
@@ -110,7 +108,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/white"
-                            android:text="100.0"
                             android:textSize="16sp"/>
                     </LinearLayout>
 
@@ -140,7 +137,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/white"
-                            android:text="100.0"
                             android:textSize="16sp"/>
                     </LinearLayout>
                     <LinearLayout
@@ -181,7 +177,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/white"
-                            android:text="100.0"
                             android:textSize="16sp"/>
                     </LinearLayout>
 
@@ -572,7 +567,37 @@
 
                         ></ImageView>
                 </RelativeLayout>
+                <RelativeLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:id="@+id/mm"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_credit_card_24"
 
+                        ></ImageView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="22dp"
+                        android:layout_toRightOf="@+id/mm"
+                        android:text="音效开关"></TextView>
+                    <Switch
+                        android:id="@+id/switchButton"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        ></Switch>
+                </RelativeLayout>
             </LinearLayout>
 
 
