--- a/app/src/main/res/layout/group_report_list_item.xml
+++ b/app/src/main/res/layout/group_report_list_item.xml
@@ -83,6 +83,16 @@
 
 
 
+            <TextView
+                android:id="@+id/paymentxex"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textColor="#3a3a3a"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:text="1287398127381273"/>
+
 
 
         </LinearLayout>
