--- a/app/src/main/res/layout/activity_group_report.xml
+++ b/app/src/main/res/layout/activity_group_report.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.group.GroupReportActivity">
+    android:layout_height="match_parent">
     <RelativeLayout
         android:id="@+id/closelayout"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,8 +38,7 @@
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
             android:visibility="gone"
@@ -263,7 +261,6 @@
 
     </LinearLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
 
         app:layout_constraintTop_toBottomOf="@+id/layout"
@@ -276,10 +273,5 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:splitMotionEvents="false" />
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
