--- a/app/src/main/res/layout/dialog_add_group.xml
+++ b/app/src/main/res/layout/dialog_add_group.xml
@@ -231,6 +231,43 @@
                 android:textSize="15sp"
                 android:imeOptions="actionDone"/>
 
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="11dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="@android:color/black"
+                android:text="微信卖币佣金" />
+
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/wechattext"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/bg_grey"
+                android:ellipsize="end"
+                android:hint=""
+                android:paddingStart="10dp"
+                android:textSize="15sp"
+                android:imeOptions="actionDone"/>
+
+
+
         </LinearLayout>
 
         <LinearLayout
