--- a/app/src/main/res/layout/activity_group_listctivity.xml
+++ b/app/src/main/res/layout/activity_group_listctivity.xml
@@ -18,15 +18,7 @@
         android:src="@drawable/ic_baseline_clear_24"
 
         ></ImageButton>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
 
-        app:layout_constraintTop_toBottomOf="@+id/closeBtn"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:src="@drawable/ic_baseline_add_24"
@@ -36,5 +28,13 @@
         android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:splitMotionEvents="false"
+        app:layout_constraintTop_toBottomOf="@+id/closeBtn"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
