--- a/app/src/main/res/layout/dialog_sell_sure.xml
+++ b/app/src/main/res/layout/dialog_sell_sure.xml
@@ -52,7 +52,7 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="姓名最后一位" />
+                android:text="打款人姓名最后一位" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
