--- a/app/src/main/res/layout/dialog_add_alldata.xml
+++ b/app/src/main/res/layout/dialog_add_alldata.xml
@@ -124,6 +124,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="left|center"
