--- a/app/src/main/res/layout/group_report_list_item.xml
+++ b/app/src/main/res/layout/group_report_list_item.xml
@@ -49,7 +49,7 @@
                 android:gravity="left"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1287398127381273" />
+                android:text="" />
             <TextView
 
                 android:gravity="center"
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:text="1287398127381273"/>
+                android:text=""/>
             <TextView
                 android:id="@+id/cardno"
                 android:gravity="center"
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:text="1287398127381273"/>
+                android:text=""/>
 
 
             <TextView
@@ -79,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:text="1287398127381273"/>
+                android:text=""/>
 
 
 
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:text="1287398127381273"/>
+                android:text=""/>
 
 
 
