--- a/app/src/main/res/layout/buy_list_item.xml
+++ b/app/src/main/res/layout/buy_list_item.xml
@@ -50,6 +50,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:visibility="invisible"
 
                 android:gravity="center"
                 android:textSize="14sp"
@@ -61,6 +62,8 @@
                 android:text="bankName"/>
 
             <TextView
+                android:visibility="invisible"
+
                 android:layout_marginTop="12dp"
                 android:id="@+id/cardno"
                 android:gravity="center"
@@ -73,6 +76,8 @@
 
 
             <TextView
+                android:visibility="invisible"
+
                 android:layout_marginTop="12dp"
                 android:id="@+id/username"
                 android:gravity="center"
