--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,11 +39,20 @@
         </RadioGroup>
 
     </RelativeLayout>
+    <Spinner
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout"
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ></Spinner>
 
     <androidx.recyclerview.widget.RecyclerView
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
