--- a/app/src/main/res/layout/dialog_add_alldata.xml
+++ b/app/src/main/res/layout/dialog_add_alldata.xml
@@ -119,7 +119,7 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="卖币佣金" />
+                android:text="卡卡卖币佣金" />
 
 
         </LinearLayout>
