--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -9,6 +9,7 @@
     <color name="colorAccent">#D32F2F</color>
     <color name="localyellow">#FFFF00</color>
 
+    <color name="localorgen">#ff8800</color>
 
 
     <color name="color_green">#008000</color>
