--- a/app/src/main/res/layout/dialog_add_group.xml
+++ b/app/src/main/res/layout/dialog_add_group.xml
@@ -150,7 +150,7 @@
                 android:gravity="center"
                 android:textSize="15sp"
                 android:textColor="@android:color/black"
-                android:text="卖币佣金" />
+                android:text="银行卡佣金" />
             <EditText
                 android:inputType="text"
                 android:id="@+id/text1"
