--- a/app/src/main/res/layout/activity_mainwechat.xml
+++ b/app/src/main/res/layout/activity_mainwechat.xml
@@ -24,8 +24,7 @@
             android:text="微信扫码"
             android:textSize="18sp"
             android:textColor="@android:color/white" />
-
-        <TextView
+        <Button
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,8 +33,18 @@
             android:layout_marginEnd="20dp"
             android:lineSpacingExtra="3sp"
             android:textSize="14sp"
-            android:textColor="@android:color/black"
-            android:text=""/>
+            android:text="上传失败 自行取连结"/>
+<!--        <TextView-->
+<!--            android:id="@+id/message"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="11dp"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:lineSpacingExtra="3sp"-->
+<!--            android:textSize="14sp"-->
+<!--            android:textColor="@android:color/black"-->
+<!--            android:text=""/>-->
 
         <LinearLayout
             android:visibility="gone"
@@ -203,6 +212,45 @@
         </LinearLayout>
 
 
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:gravity="center"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginTop="11dp"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:layout_marginEnd="20dp">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:gravity="center"-->
+<!--                android:textSize="15sp"-->
+<!--                android:textColor="@android:color/black"-->
+<!--                android:text="地址" />-->
+
+<!--            <EditText-->
+<!--                android:id="@+id/addurl"-->
+<!--                android:layout_width="200dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginStart="15dp"-->
+<!--                android:background="@drawable/bg_grey"-->
+<!--                android:ellipsize="end"-->
+<!--                android:paddingStart="10dp"-->
+<!--                android:textSize="15sp"-->
+<!--                android:inputType="text"-->
+<!--                android:imeOptions="actionDone"/>-->
+<!--            <Button-->
+<!--                android:id="@+id/scanbtn"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="选择图片"-->
+<!--                android:textSize="18sp"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                android:background="@drawable/shape_red_btn" />-->
+
+<!--        </LinearLayout>-->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -220,18 +268,29 @@
                 android:textColor="@android:color/black"
                 android:text="地址" />
 
-            <TextView
-                android:gravity="center_vertical"
-                android:id="@+id/pay_adds"
+            <EditText
+                android:id="@+id/addurl"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:background="@drawable/bg_grey"
                 android:ellipsize="end"
-                android:hint=""
                 android:paddingStart="10dp"
                 android:textSize="15sp"
+                android:inputType="text"
                 android:imeOptions="actionDone"/>
+            <!--            <TextView-->
+            <!--                android:gravity="center_vertical"-->
+            <!--                android:id="@+id/pay_adds"-->
+            <!--                android:layout_width="200dp"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:layout_marginStart="15dp"-->
+            <!--                android:background="@drawable/bg_grey"-->
+            <!--                android:ellipsize="end"-->
+            <!--                android:hint=""-->
+            <!--                android:paddingStart="10dp"-->
+            <!--                android:textSize="15sp"-->
+            <!--                android:imeOptions="actionDone"/>-->
             <Button
                 android:id="@+id/scanbtn"
                 android:layout_width="wrap_content"
@@ -242,7 +301,6 @@
                 android:background="@drawable/shape_red_btn" />
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
