--- a/app/src/main/res/layout/bank_item_view.xml
+++ b/app/src/main/res/layout/bank_item_view.xml
@@ -52,12 +52,11 @@
             android:scaleType="centerInside"
             android:src="@drawable/close_btn"/>
 
-        <ch.ielse.view.SwitchView
+        <Switch
             android:layout_gravity="center"
             android:id="@+id/switchButton"
             android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            app:primaryColor="#4ad763"/>
+            android:layout_height="25dp" />
     </LinearLayout>
 
     <View
