--- a/app/src/main/res/layout/activity_uploadphoto.xml
+++ b/app/src/main/res/layout/activity_uploadphoto.xml
@@ -21,11 +21,12 @@
             android:layout_height="40dp"
             android:background="@drawable/dialog_top_bar"
             android:gravity="center"
-            android:text="支付宝扫码"
+            android:text="扫码(原图)"
             android:textSize="18sp"
             android:textColor="@android:color/white" />
 
         <Button
+            android:visibility="invisible"
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
