--- a/app/src/main/res/layout/bankcard_item_view.xml
+++ b/app/src/main/res/layout/bankcard_item_view.xml
@@ -64,6 +64,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="kdjfgsdfdsf" />
+
+            <TextView
+                android:textSize="12sp"
+                android:textColor="#3a3a3a"
+                android:gravity="center"
+                android:id="@+id/lock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="kdjfgsdfdsf" />
         </LinearLayout>
 
         <ImageView
