--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -71,6 +71,7 @@
                             android:textSize="16sp"/>
                     </LinearLayout>
                     <LinearLayout
+                        android:id="@+id/canuselayout"
                         android:layout_marginLeft="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -544,6 +545,38 @@
                         android:layout_marginLeft="22dp"
                         android:layout_toRightOf="@+id/imgpayment"
                         android:text="提現"></TextView>
+                    <ImageView
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
+
+                        ></ImageView>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/tranmoneylayout"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:id="@+id/tranmoney"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_credit_card_24"
+
+                        ></ImageView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="22dp"
+                        android:layout_toRightOf="@+id/tranmoney"
+                        android:text="余额内转"></TextView>
                     <ImageView
                         android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
