--- a/app/src/main/res/layout/add_tran_money.xml
+++ b/app/src/main/res/layout/add_tran_money.xml
@@ -95,7 +95,7 @@
                     android:layout_marginStart="15dp"
                     android:background="@drawable/bg_grey"
                     android:ellipsize="end"
-                    android:hint="请输入银行名称"
+                    android:hint=""
                     android:paddingStart="10dp"
                     android:textSize="15sp"
                     android:imeOptions="actionDone"/>
@@ -190,11 +190,9 @@
                 android:layout_marginStart="15dp"
                 android:background="@drawable/bg_grey"
                 android:ellipsize="end"
-                android:hint="预设50000"
+                android:hint=""
                 android:paddingStart="10dp"
                 android:textSize="15sp"
-                android:inputType="number"
-                android:digits="1234567890"
                 android:imeOptions="actionDone"/>
 
 
