--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -186,8 +186,8 @@
 
 
             </LinearLayout>
-
             <LinearLayout
+                android:visibility="gone"
                 android:layout_marginTop="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -198,7 +198,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/img3"
-                    android:text="团队管理"></TextView>
+                    android:text="公告栏"></TextView>
                 <RelativeLayout
                     android:visibility="gone"
                     android:layout_marginLeft="16dp"
@@ -232,6 +232,86 @@
 
                         ></ImageView>
                 </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/layout_newlist"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:id="@+id/newimg"
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_credit_card_24"
+
+                        ></ImageView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="22dp"
+                        android:layout_toRightOf="@+id/newimg"
+                        android:text="公告栏"></TextView>
+                    <ImageView
+                        android:layout_alignParentRight="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
+
+                        ></ImageView>
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_marginLeft="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/img3"
+                    android:text="团队管理"></TextView>
+<!--                <RelativeLayout-->
+<!--                    android:visibility="gone"-->
+<!--                    android:layout_marginLeft="16dp"-->
+<!--                    android:layout_marginRight="8dp"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    >-->
+<!--                    <ImageView-->
+<!--                        android:id="@+id/img1"-->
+<!--                        android:layout_alignParentLeft="true"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:src="@drawable/ic_baseline_groups_24"-->
+
+<!--                        ></ImageView>-->
+
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerInParent="true"-->
+<!--                        android:layout_marginLeft="22dp"-->
+<!--                        android:layout_toRightOf="@+id/img1"-->
+<!--                        android:text="创建成员"></TextView>-->
+
+
+<!--                    <ImageView-->
+<!--                        android:layout_alignParentRight="true"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"-->
+
+<!--                        ></ImageView>-->
+<!--                </RelativeLayout>-->
                 <RelativeLayout
                     android:id="@+id/layout_grouplist"
                     android:layout_marginTop="8dp"
